# flask-portfolio

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  routes.py
app/templates/: base.html  index.html
core/: settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py  tests.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/static/css/: style.css
portfolio/static/js/: script.js
portfolio/templates/portfolio/: base.html  index.html
portfolio/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
tests/: test_routes.py
