[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "flask-portfolio"
version = "0.1.0"
description = "Landing page pessoal com Flask + Jinja2 + Tailwind (CDN)"
requires-python = ">=3.11"


[project.dependencies]
Flask = ">=3.0,<4.0"
python-dotenv = ">=1.0.0"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
